docker-scripts/nzbhydra2/nzbhydra2.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbhydra
  namespace: nzbhydra
  labels:
    app: nzbhydra
  annotations:
    keel.sh/policy: force # update policy (available: patch, minor, major, all, force)
    keel.sh/trigger: poll # enable active repository checking (webhooks and GCR would still work)
    keel.sh/approvals: "0" # required approvals to update
    keel.sh/match-tag: "true"
    keel.sh/pollSchedule: "@daily"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbhydra
  template:
    metadata:
      labels:
        app: nzbhydra
    spec:
      containers:
        - name: nzbhydar
          image: linuxserver/nzbhydra2
          imagePullPolicy: Always
          ports:
            - containerPort: 5076
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          hostPath:
            type: Directory
            path: /home/docker/nzbhydra2/config
