docker-scripts/nzbhydra2/nzbhydra2.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra
  namespace: nzbhydra
spec:
  selector:
    app: nzbhydra
  ports:
  - protocol: TCP
    name: http
    port: 5076
    targetPort: 5076
