docker-scripts/nzbhydra2/nzbhydra2.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbhydra
  namespace: nzbhydra
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - 6f3806410f7b.sn.mynetname.net
      secretName: nzbhydra-secret
  rules:
    - host: nzbhydra.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nzbhydra
                port:
                  name: http
    - host: 6f3806410f7b.sn.mynetname.net
      http:
        paths:
          - path: /nzbhydra
            pathType: Prefix
            backend:
              service:
                name: nzbhydra
                port:
                  name: http
